--- a/sites/tranan.html
+++ b/sites/tranan.html
@@ -20,9 +20,9 @@
     <div class="mainmenu">
         <ul class="menubuttons">
             <li><a>START</a></li>
-            <li><a></a></li>
-            <li><a></a></li>
-            <li><a></a></li>
+            <li><a>MENY</a></li>
+            <li><a>BOKA</a></li>
+            <li><a>OM OSS</a></li>
             <li><a>KONTAKT</a></li>
         </ul>
     </div>
