Fixade alla länkar & navbaren

--- a/sites/tranan.html
+++ b/sites/tranan.html
@@ -26,12 +26,12 @@
             </table>
         </div>
         <div id="flagz">
-            <img src="img/swedenicon.png"/>
-            <img src="img/ukicon.png"/>
+            <a href="tranan.html"><img src="img/swedenicon.png"/></a>
+            <a href="tranan.html"><img src="img/ukicon.png"/></a>
         </div>
         <div class="logo">
             <!--Header-->
-            <img src="img/cranep.png">
+            <a href="tranan.html"><img src="img/cranep.png"/></a>
         </div>
     </header>
 
@@ -39,14 +39,23 @@
         <!--headertab-->
         <div class="mainmenu">
             <ul class="menubuttons">
-                <li><a>| START |</a></li>
-                <li><a>| MENY |</a></li>
-                <li><a>| BOKA |</a></li>
-                <li><a>| OM OSS |</a></li>
-                <li><a>| KONTAKT |</a></li>
+                <li><a href="tranan.html">START</a></li>
+                <li><a href="tranan.html">MENY</a></li>
+                <li><a href="tranan.html">BOKA</a></li>
+                <li><a href="tranan.html">OM OSS</a></li>
+                <li><a href="tranan.html">KONTAKT</a></li>
             </ul>
         </div>
     </nav>
+    <div id="info">
+        <h1>
+            Que
+        </h1>
+        <p> OIASDASDJ   sadfsdf    fadf     sadf sd    dfd  dfdf  dfdf dfd fdfdfafa.s  adsf sadf .sd afasd f.
+            sdafasdfs.df fdsa.sdf.
+            IPsdf dsf sad sdfsdfsdf asdf ..  adfsasdfsdf sa!!!. asdf sdf dsaf sd.. ???? asdfadsf.
+        </p>
+    </div>
 
 </div>
 </body>
